--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,8 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "illuminate/support": "^8.0|^9.0|^10.0",
-        "guzzlehttp/guzzle": "^7.0"
+        "php": "^8.0"
+
     },
 
     "autoload": {
